[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "esm"
version = "0.1.0"
# description = "Your ESM command-line tool"

[project.scripts]
esm = "esm.main:start"

# pytest recommends storing settings in this file (not setup.cfg)
[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
# log_cli=true and level setting below make sure logging in tests shows up in the output
log_cli = true
# log_cli_level = logging.DEBUG
log_cli_level = 10